--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,13 +5,14 @@
 <html>
 
 	<head>
-		<title>About Rango</title>
+		<title>Rango</title>
 	</head>
 
 	<body>
+		<h1>About Rango</h1>
+
 		<div>
 			<strong>Rango says here is the about page</strong><br/>
-    			Welcome to my page. <br />
 			This tutorial has been put together by Mihaela Petrova.
     		</div>
     
