--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,13 +6,16 @@
 
 	<head>
 		<title>Rango</title>
+		<link rel = "stylesheet" href = "{% static "css/base.css" %}" />
+           	<script src = "{% static "js/query.js" % }"></script>
 	</head>
 
 	<body>
 		<h1>Rango says...</h1>
 		
 		<div>
-			hey there partner!
+			hey there partner!</br>
+			<strong> {{ boldmessage }} </strong><br/>
 		</div>
 
 		<div>
@@ -31,7 +34,8 @@
 
 		<div>
 			<a href="/rango/about/">About Rango</a><br />
-			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+			<img src="{% static "images/rango.jpg" %}" 
+				alt="Picture of Rango" />
 		</div>
 	</body>
 
