--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-		<h1>About Rango</h1>
+		<h1>Rango says here is the about page!...</h1>
 
 		<div>
 			<strong>Rango says here is the about page</strong><br/>
