--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,8 +6,6 @@
 
 	<head>
 		<title>Rango</title>
-		<link rel = "stylesheet" href = "{% static "css/base.css" %}" />
-           	<script src = "{% static "js/query.js" % }"></script>
 	</head>
 
 	<body>
@@ -19,17 +17,33 @@
 		</div>
 
 		<div>
-		{% if categories %}
-		<ul>
-			{% for category in categories %}
-			<li>
-			<a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
-			</li>
-			{% endfor %}
-		</ul>
-		{% else %}
-			<strong>There are no categories present.</strong>
-		{% endif %}
+			<h2>Most Liked Categories</h2>
+			{% if categories %}
+			<ul>
+				{% for category in categories %}
+					<li>
+						<a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
+					</li>
+				{% endfor %}
+			</ul>
+			{% else %}
+				<strong>There are no categories present.</strong>
+			{% endif %}
+		</div>
+
+		<div>
+			<h2>Most Viewed Pages</h2>
+			{% if pages %}
+			<ul>
+				{% for page in pages %}
+					<li>
+						<a href="{{ page.url }}">{{ page.title }}</a>
+					</li>
+				{% endfor %}
+			</ul>
+			{% else %}
+				<strong>There are no pages present.</strong>
+			{% endif %}
 		</div>
 
 		<div>
