--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,14 +5,15 @@
 <html>
 
 	<head>
-		<title>Rango</title>
+		<title>Rango says here is the about page</title>
 	</head>
 
 	<body>
 		<h1>Rango says here is the about page!...</h1>
 
 		<div>
-			<strong>Rango says here is the about page</strong><br/>
+			here is the about page!<br/>
+			<strong>{{ boldmessage }}</strong> <br />
 			This tutorial has been put together by Mihaela Petrova.
     		</div>
     
