--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -32,6 +32,10 @@
 		</div>
 
 		<div>
+			<a href="/rango/add_category/">Add a New Category</a><br />
+		</div>
+
+		<div>
 			<h2>Most Viewed Pages</h2>
 			{% if pages %}
 			<ul>
