--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,27 +1,23 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block body_block %}
 
-	<head>
-		<title>Rango says here is the about page</title>
-	</head>
+	<h1> Rango says...</h1>
 
-	<body>
-		<h1>Rango says here is the about page!...</h1>
+	<div>
+		Rango says here is the about page! <br />
+           	<strong>{{ boldmessage }}</strong> <br />
+		This tutorial has been put together by Mihaela Petrova.
+    	</div>
 
-		<div>
-			here is the about page!<br/>
-			<strong>{{ boldmessage }}</strong> <br />
-			This tutorial has been put together by Mihaela Petrova.
-    		</div>
+	<div>
+		<img src="{% static "images/cat.jpg" %}"
+			alt="Picture of a Cat"/>
+	</div>
     
-    		<div>
-    			<a href="/rango/">Index</a><br />
-    			<img src = "{{ MEDIA_URL}}cat.jpg"
-                    		alt = "Picture of a Cat" />
-    		</div>
-	</body>
-
-</html>
+    	<div>
+    		<img src="{{ MEDIA_URL}}cat.jpg"
+                  	alt = "Picture of a Cat" />
+    	</div>
+{% endblock %}
