--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,7 +8,6 @@
 	<div>
 		Rango says here is the about page! <br />
            	<strong>{{ boldmessage }}</strong> <br />
-		This tutorial has been put together by Mihaela Petrova.
     	</div>
 
 	<div>
@@ -20,4 +19,6 @@
     		<img src="{{ MEDIA_URL}}cat.jpg"
                   	alt = "Picture of a Cat" />
     	</div>
+
+	<p>visits: {{ visits }}</p>
 {% endblock %}
